# djangocms-boilerplate

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose-test.yml  docker-compose.yml  docker.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: docker.yml
example/: config.yml  docker-compose.yml
src/base/: __init__.py  admin.py  apps.py  cms_toolbars.py  config.py  context_processors.py  models.py  settings.py  urls.py
src/base/management/commands/: boil.py
src/base/migrations/: 0001_initial.py
src/base/templates/: base.html  default.html  footer.html  home.html  languages.html  nav-items.html  navigation.html  robots.txt  single-page.html
src/cms_components/: models.py
src/cms_teams/: __init__.py  admin.py  apps.py  choices.py  cms_apps.py  cms_menu.py  cms_plugins.py  cms_toolbars.py  models.py  signals.py  translation.py  urls.py  views.py
src/cms_teams/migrations/: 0001_initial.py
src/cms_teams/templates/cms_teams/: member.html  plugin_member.html  plugin_team.html  team.html  teams.html
src/locales/de/LC_MESSAGES/: django.po
src/locales/en/LC_MESSAGES/: django.po
src/static/: extras.css  theme.scss
src/templates/: 404.html  500.html
